--- a/reference.bib
+++ b/reference.bib
@@ -29,14 +29,12 @@
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICML,
   year      = {2018}
 }
-
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -65,6 +63,15 @@
   year      = {2003}
 }
 
+
+@article{Adikusuma2020,
+  title   = {Fast construction of discrete geodesic graphs},
+  author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
+  journal = TOG,
+  volume  = {39},
+  number  = {2},
+  year    = {2020}
+}
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -99,13 +106,13 @@
   year      = {2009}
 }
 
+
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
-
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -122,6 +129,7 @@
   year      = {2016}
 }
 
+
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
@@ -129,13 +137,13 @@
   year    = {2017}
 }
 
+
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
   title     = {K-means++: the advantages of careful seeding},
   booktitle = {SODA},
   year      = {2007}
 }
-
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -145,6 +153,7 @@
   volume  = {45},
   number  = {2}
 }
+
 
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
@@ -163,12 +172,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
   author    = {Atzmon, Matan and Lipman, Yaron},
   booktitle = ICLR,
   year      = {2021}
 }
+
 
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
@@ -197,6 +208,7 @@
   year    = {2016}
 }
 
+
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
   title   = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
@@ -212,12 +224,14 @@
   publisher = {Citeseer}
 }
 
+
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
   title     = {GIFT: A real-time and scalable {3D} shape search engine},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
@@ -244,6 +258,7 @@
   year    = {2020}
 }
 
+
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
   title   = {Anisotropic diffusion of surfaces and functions on surfaces},
@@ -259,6 +274,7 @@
   journal = {arXiv preprint arXiv:1806.01261},
   year    = {2018}
 }
+
 
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
@@ -293,6 +309,7 @@
   volume  = {36},
   number  = {1}
 }
+
 
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
@@ -369,7 +386,6 @@
   number  = {1}
 }
 
-
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
   year   = {2010},
@@ -392,13 +408,13 @@
   year      = {2011}
 }
 
+
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
   author    = {Bridson, Robert},
   year      = {2015},
   publisher = {CRC press}
 }
-
 
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
@@ -470,6 +486,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
   title     = {Deep clustering for unsupervised learning of visual features},
@@ -498,11 +515,19 @@
   year      = {2017}
 }
 
+
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
+}
+
+@inproceedings{Chen1990,
+  title     = {Shortest paths on a polyhedron},
+  author    = {Chen, Jindong and Han, Yijie},
+  booktitle = {Proceedings of the sixth annual symposium on Computational geometry},
+  year      = {1990}
 }
 
 @article{Chen2003,
@@ -574,7 +599,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
   author    = {Chibane, Julian and Alldieck, Thiemo and Pons-Moll, Gerard},
@@ -612,7 +636,6 @@
   year    = {2021}
 }
 
-
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
   title   = {Interactive and anisotropic geometry processing using the screened Poisson equation},
@@ -621,7 +644,6 @@
   volume  = {30},
   number  = {4}
 }
-
 
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
@@ -645,7 +667,6 @@
   journal = {arXiv preprint arXiv:1801.10130},
   year    = {2018}
 }
-
 
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
@@ -679,7 +700,6 @@
   year      = {2013}
 }
 
-
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
   author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
@@ -712,12 +732,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Dai2017a,
   author    = {Dai, Angela and Chang, Angel X. and Savva, Manolis and Halber, Maciej and Funkhouser, Thomas and Nie{\ss}ner, Matthias},
   booktitle = CVPR,
   title     = {{ScanNet}: Richly-annotated {3D} Reconstructions of Indoor Scenes},
   year      = {2017}
 }
+
 
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
@@ -742,6 +764,7 @@
   year      = {2009}
 }
 
+
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
   author    = {Deng, Haowen and Birdal, Tolga and Ilic, Slobodan},
@@ -763,6 +786,7 @@
   year    = {2018}
 }
 
+
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
   title   = {A Bayesian method for probable surface reconstruction and decimation},
@@ -771,6 +795,7 @@
   volume  = {25},
   number  = {1}
 }
+
 
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
@@ -896,14 +921,12 @@
   year      = {2016}
 }
 
-
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
-
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -920,7 +943,6 @@
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
-
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -988,6 +1010,7 @@
   year      = {2011}
 }
 
+
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
   title   = {Randomized cuts for {3D} mesh analysis},
@@ -996,6 +1019,7 @@
   volume  = {27},
   number  = {5}
 }
+
 
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
@@ -1012,6 +1036,7 @@
   author    = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
   publisher = {MIT Press}
 }
+
 
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
@@ -1048,14 +1073,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
   author    = {Gropp, Amos and Yariv, Lior and Haim, Niv and Atzmon, Matan and Lipman, Yaron},
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1122,14 +1145,12 @@
   year    = {2021}
 }
 
-
 @inproceedings{Gupta2016,
   author    = {Gupta, Saurabh and Hoffman, Judy and Malik, Jitendra},
   booktitle = CVPR,
   title     = {Cross modal distillation for supervision transfer},
   year      = {2016}
 }
-
 
 @inproceedings{Guskov1999,
   author    = {Guskov, Igor and Sweldens, Wim and Schr\"{o}der, Peter},
@@ -1145,12 +1166,14 @@
   year      = {2010}
 }
 
+
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
   author    = {Ha, David and Dai, Andrew and Le, Quoc V},
   booktitle = ICLR,
   year      = {2017}
 }
+
 
 @inproceedings{Hadsell2006,
   author    = {Raia Hadsell and Sumit Chopra and Yann LeCun},
@@ -1216,6 +1239,7 @@
   number  = {1}
 }
 
+
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
   author  = {Hart, John C},
@@ -1224,6 +1248,7 @@
   number  = {10},
   year    = {1996}
 }
+
 
 @inproceedings{Hassani2019,
   title     = {Unsupervised multi-task feature learning on point clouds},
@@ -1307,7 +1332,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @article{Hinton2006,
   title   = {A fast learning algorithm for deep belief nets},
@@ -1407,6 +1431,7 @@
   booktitle = NeurIPS,
   year      = {2018}
 }
+
 
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
@@ -1662,6 +1687,15 @@
   number  = {4}
 }
 
+@article{Kimmel1998,
+  title   = {Computing geodesic paths on manifolds},
+  author  = {Kimmel, Ron and Sethian, James A.},
+  journal = {Proceedings of the National Academy of Science},
+  volume  = {95},
+  number  = {15},
+  year    = {1998}
+}
+
 @inproceedings{Kingma2014,
   author    = {Diederik P. Kingma and Max Welling},
   title     = {Auto-encoding variational Bayes},
@@ -1735,7 +1769,6 @@
   year      = {2004},
   volume    = {166}
 }
-
 
 @article{Krishnan2013,
   author  = {Krishnan, Dilip and Fattal, Raanan and Szeliski, Richard},
@@ -1811,7 +1844,6 @@
   year      = {2020}
 }
 
-
 @article{Leon2008,
   title   = {Volume octree with an implicitly defined dual grid},
   author  = {Le{\'o}n, Alejandro and Torres, Juan Carlos and Velasco, Francisco},
@@ -1820,6 +1852,7 @@
   number  = {4},
   year    = {2008}
 }
+
 
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
@@ -1847,7 +1880,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
@@ -1872,14 +1904,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1897,13 +1927,13 @@
   year    = {2021}
 }
 
-
 @article{Li2021a,
   title   = {Can Vision Transformers Perform Convolution?},
   author  = {Shanda Li and Xiangning Chen and Di He and Cho-Jui Hsieh},
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
+
 
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
@@ -1922,7 +1952,6 @@
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
 
-
 @inproceedings{Lipman2021,
   title     = {Phase Transitions, Distance Functions, and Implicit Neural Representations},
   author    = {Lipman, Yaron},
@@ -1938,6 +1967,7 @@
   volume  = {39},
   number  = {9}
 }
+
 
 @inproceedings{Liu2018,
   author    = {Zhijian Liu and William T. Freeman and Joshua B. Tenenbaum and Jiajun Wu},
@@ -1960,12 +1990,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Liu2019,
   author    = {Yongcheng Liu and Bin Fan and Shiming Xiang and Chunhong Pan},
   booktitle = CVPR,
   title     = {Relation-shape convolutional neural network for point cloud analysis},
   year      = {2019}
 }
+
 
 @inproceedings{Liu2019a,
   title     = {Point-Voxel {CNN} for Efficient {3D} Deep Learning},
@@ -1980,6 +2012,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
@@ -2001,6 +2034,7 @@
   year    = {2021},
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
+
 
 @inproceedings{Liu2021a,
   title        = {Swin transformer: Hierarchical vision transformer using shifted windows},
@@ -2173,6 +2207,24 @@
   number  = {5}
 }
 
+@article{Memoli2001,
+  title   = {Fast computation of weighted distance functions and geodesics on implicit hyper-surfaces},
+  author  = {M{\'e}moli, Facundo and Sapiro, Guillermo},
+  journal = {Journal of computational Physics},
+  volume  = {173},
+  number  = {2},
+  year    = {2001}
+}
+
+@article{Memoli2005,
+  title   = {Distance Functions and Geodesics on Submanifolds of {$R^d$} and Point Clouds},
+  author  = {M{\'e}moli, Facundo and Sapiro, Guillermo},
+  journal = {SIAM Journal on Applied Mathematics},
+  volume  = {65},
+  number  = {4},
+  year    = {2005}
+}
+
 @inproceedings{Mescheder2019,
   title     = {Occupancy networks: Learning {3D} reconstruction in function space},
   author    = {Mescheder, Lars and Oechsle, Michael and Niemeyer, Michael and Nowozin, Sebastian and Geiger, Andreas},
@@ -2192,6 +2244,15 @@
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
   booktitle = ICCV,
   year      = {2021}
+}
+
+@article{Mitchell1987,
+  title   = {The discrete geodesic problem},
+  author  = {Mitchell, Joseph S. B. and Mount, David M. and Papadimitriou, Christos H.},
+  journal = {SIAM Journal on Computing},
+  volume  = {16},
+  number  = {4},
+  year    = {1987}
 }
 
 @inproceedings{Mitra2014,
@@ -2327,7 +2388,6 @@
   year    = {2002}
 }
 
-
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
   author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
@@ -2351,14 +2411,12 @@
   year      = {2015}
 }
 
-
 @inproceedings{Pan2021,
   title     = {{3D} Object Detection with {PointFormer}},
   author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Panozzo2013,
   author  = {Daniele Panozzo and Ilya Baran and Olga Diamanti and Olga Sorkine-Hornung},
@@ -2390,6 +2448,7 @@
   year      = {2017}
 }
 
+
 @article{Pauly2006,
   author  = {Pauly, Mark and Kobbelt, Leif and Gross, Markus},
   title   = {Point-based multiscale surface representation},
@@ -2413,12 +2472,14 @@
   year    = {2003}
 }
 
+
 @inproceedings{Pfaff2020,
   title     = {Learning Mesh-Based Simulation with Graph Networks},
   author    = {Pfaff, Tobias and Fortunato, Meire and Sanchez-Gonzalez, Alvaro and Battaglia, Peter},
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @inproceedings{Prakash2019,
   title     = {Structured domain randomization: Bridging the reality gap by context-aware synthetic data},
@@ -2453,6 +2514,15 @@
   title     = {Deep {Hough} Voting for {3D} Object Detection in Point Clouds},
   booktitle = CVPR,
   year      = {2019}
+}
+
+@article{Qin2016,
+  title   = {Fast and exact discrete geodesic computation based on triangle-oriented wavefront propagation},
+  author  = {Qin, Yipeng and Han, Xiaoguang and Yu, Hongchuan and Yu, Yizhou and Zhang, Jianjun},
+  journal = SIG,
+  volume  = {35},
+  number  = {4},
+  year    = {2016}
 }
 
 @inproceedings{Radford2016,
@@ -2527,7 +2597,6 @@
   number  = {1}
 }
 
-
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2548,7 +2617,6 @@
   title   = {{3D-A-Nets}: {3D} deep dense descriptor for volumetric shapes with adversarial networks},
   year    = {2017}
 }
-
 
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
@@ -2580,6 +2648,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Ronneberger2015,
   author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
   title     = {{U-Net}: Convolutional networks for biomedical image segmentation},
@@ -2603,6 +2672,7 @@
   issn    = {0377-0427}
 }
 
+
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2611,7 +2681,6 @@
   volume  = {37},
   number  = {2}
 }
-
 
 @article{Ruckert2021,
   title   = {{ADOP}: Approximate differentiable one-pixel point rendering},
@@ -2633,7 +2702,6 @@
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2664,6 +2732,7 @@
   year      = {2004}
 }
 
+
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
@@ -2687,6 +2756,16 @@
   year      = {2016}
 }
 
+
+@article{Sethian1999,
+  title   = {Fast marching methods},
+  author  = {Sethian, James A.},
+  journal = {SIAM review},
+  volume  = {41},
+  number  = {2},
+  year    = {1999}
+}
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2703,7 +2782,6 @@
   year    = {2018}
 }
 
-
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2712,7 +2790,6 @@
   volume  = {24},
   number  = {4}
 }
-
 
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
@@ -2730,7 +2807,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2755,11 +2831,22 @@
   year      = {2018}
 }
 
+
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
   title   = {Improved training with curriculum {GANs}},
   journal = {arXiv preprint arXiv:1807.09295},
   year    = {2018}
+}
+
+
+@article{Sharp2020,
+  title   = {You can find geodesic paths in triangle meshes by just flipping edges},
+  author  = {Sharp, Nicholas and Crane, Keenan},
+  journal = SA,
+  volume  = {39},
+  number  = {6},
+  year    = {2020}
 }
 
 @article{Shen2004,
@@ -2770,6 +2857,7 @@
   volume  = {10},
   number  = {3}
 }
+
 
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
@@ -2789,14 +2877,12 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
-
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -2811,7 +2897,6 @@
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
-
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2830,12 +2915,14 @@
   number  = {6}
 }
 
+
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
   booktitle = NeurIPS,
   year      = {2002}
 }
+
 
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
@@ -2850,6 +2937,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
@@ -2879,14 +2967,12 @@
   year      = {2020}
 }
 
-
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
-
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -2917,6 +3003,7 @@
   year      = {2004}
 }
 
+
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
   title   = {{Dropout}: A simple way to prevent neural networks from overfitting},
@@ -2925,6 +3012,7 @@
   volume  = {15},
   number  = {1}
 }
+
 
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
@@ -2954,7 +3042,6 @@
   year      = {2020}
 }
 
-
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -2963,7 +3050,6 @@
   volume  = {28},
   number  = {5}
 }
-
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -3002,12 +3088,14 @@
   organization = {Eurographics Association}
 }
 
+
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
@@ -3016,6 +3104,15 @@
   year    = {2015},
   volume  = {34},
   number  = {6}
+}
+
+@article{Surazhsky2005,
+  title   = {Fast exact and approximate geodesics on meshes},
+  author  = {Surazhsky, Vitaly and Surazhsky, Tatiana and Kirsanov, Danil and Gortler, Steven J and Hoppe, Hugues},
+  journal = TOG,
+  volume  = {24},
+  number  = {3},
+  year    = {2005}
 }
 
 @article{Tagliasacchi2011,
@@ -3027,14 +3124,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
-
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3049,7 +3144,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
@@ -3068,6 +3162,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tang2021,
   title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
   author    = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
@@ -3081,6 +3176,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -3128,7 +3224,6 @@
   year      = 2019
 }
 
-
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3150,12 +3245,14 @@
   year      = {1998}
 }
 
+
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
   title     = {Multi-view supervision for single-view reconstruction via differentiable ray consistency},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -3366,14 +3463,12 @@
   year      = {2021}
 }
 
-
 @article{Wang2020b,
   author  = {Hanchen Wang and Qi Liu and Xiangyu Yue and Joan Lasenby and Matthew J. Kusner},
   title   = {Pre-Training by Completing Point Clouds},
   journal = {arXiv:2010.01089},
   year    = {2020}
 }
-
 
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
@@ -3396,12 +3491,14 @@
   year      = {2021}
 }
 
+
 @inproceedings{Wang2021c,
   title     = {Pyramid vision transformer: A versatile backbone for dense prediction without convolutions},
   author    = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Wang2022,
   title   = {Dual Octree Graph Networks for Learning Adaptive Volumetric Shape Representations},
@@ -3453,7 +3550,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
   author    = {Williams, Francis and Trager, Matthew and Bruna, Joan and Zorin, Denis},
@@ -3484,6 +3580,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
@@ -3498,7 +3595,6 @@
   year      = {2017}
 }
 
-
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
   title   = {Constructing {3D CSG} models from {3D} raw point clouds},
@@ -3507,7 +3603,6 @@
   volume  = {37},
   number  = {5}
 }
-
 
 @inproceedings{Wu2018a,
   author    = {Wu, Zhirong and Xiong, Yuanjun and Yu, Stella X. and Lin, Dahua},
@@ -3532,12 +3627,14 @@
   number  = {4}
 }
 
+
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
+
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -3592,6 +3689,14 @@
   year      = {2021}
 }
 
+@article{Xin2009,
+  title   = {Improving {Chen and Han}'s algorithm on the discrete geodesic problem},
+  author  = {Xin, Shi-Qing and Wang, Guo-Jin},
+  journal = SIG,
+  volume  = {28},
+  number  = {4},
+  year    = {2009}
+}
 
 @incollection{Xu2009,
   title     = {Partial intrinsic reflectional symmetry of {3D} shapes},
@@ -3599,7 +3704,6 @@
   booktitle = SA,
   year      = {2009}
 }
-
 
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
@@ -3617,12 +3721,14 @@
   booktitle = {Proceedings of Graphics Interface}
 }
 
+
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
   title     = {Deep edge-aware filters},
   booktitle = ICML,
   year      = {2015}
 }
+
 
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
@@ -3633,6 +3739,14 @@
   number  = {1}
 }
 
+@article{Xu2015b,
+  title   = {Fast wavefront propagation {(FWP)} for computing exact geodesic distances on meshes},
+  author  = {Xu, Chunxu and Wang, Tuanfeng Y and Liu, Yong-Jin and Liu, Ligang and He, Ying},
+  journal = TVCG,
+  volume  = {21},
+  number  = {7},
+  year    = {2015}
+}
 
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
@@ -3641,13 +3755,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
   author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
@@ -3656,6 +3770,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3663,7 +3778,6 @@
   year      = {2003},
   issn      = {1530-1052}
 }
-
 
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
@@ -3678,6 +3792,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3716,14 +3831,12 @@
   year      = {2018}
 }
 
-
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3742,6 +3855,7 @@
   year         = {2017}
 }
 
+
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
   title   = {Learning hierarchical shape segmentation and labeling from online repositories},
@@ -3751,13 +3865,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -3766,6 +3880,25 @@
   year    = {2018},
   volume  = {37},
   number  = {4}
+}
+
+@article{Ying2013,
+  title   = {Saddle vertex graph ({SVG}) a novel solution to the discrete geodesic problem},
+  author  = {Ying, Xiang and Wang, Xiaoning and He, Ying},
+  journal = SA,
+  volume  = {32},
+  number  = {6},
+  year    = {2013}
+}
+
+
+@article{Ying2014,
+  title   = {{Parallel Chen-Han (PCH)} algorithm for discrete geodesics},
+  author  = {Ying, Xiang and Xin, Shi-Qing and He, Ying},
+  journal = TOG,
+  volume  = {33},
+  number  = {1},
+  year    = {2014}
 }
 
 
